# Taverna

./: .gitignore  .pre-commit-config.yaml  CODE_QUALITY_ANALYSIS.md  COMPREHENSIVE_CODE_REVIEW.md  DEVELOPMENT_SPRINT_TRACKER.md  FUNCTIONAL_TESTING_CHECKLIST.md  GAMESTATEFILES_CLEANUP_SUMMARY.md  GAMESTATE_CONSOLIDATION.md  IMMEDIATE_ACTION_PLAN.md  IMMERSIVE_GAMEPLAY_FEATURES.md  IMPLEMENTATION_ROADMAP.md  LLM_INTEGRATION_ENHANCEMENTS.md  MULTI_PERSPECTIVE_SWARM_ANALYSIS.md  MULTI_PHASE_DEVELOPMENT_PLAN.md  OPTIMIZATIONS.MD  P0_P1_IMPLEMENTATION_SUMMARY.md  P0_P1_P2_FINAL_SUMMARY.md  P0_P1_SESSION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_0_RESULTS.md  PHASE_1_INTERIM_STATUS.md  PHASE_2_COMPLETE.md  PHASE_2_INTEGRATION_STATUS.md  PROJECT_STRATEGIC_EVALUATION.md  QUALITY_IMPROVEMENT_PLAN.md  ROADMAP_VISUAL_SUMMARY.md  SCHIZO_MODE_MULTI_PERSPECTIVE_ANALYSIS.md  SPRINT_QUALITY_FOCUS.md  SWARM_ANALYSIS_REPORT.md  TAVERNA_COMPREHENSIVE_ANALYSIS.md  TAVERNA_EVOLUTION_ROADMAP.md  TAVERN_LIVING_ATMOSPHERE_ROADMAP.md  TECHNICAL_ARCHITECTURE_IMPROVEMENTS.md  THREE_JS_ENHANCEMENT_GUIDE.md  TODO.md  USER_EXPERIENCE_IMPROVEMENTS.md  WEBAPP_IMPROVEMENT_PLAN.md  demo_3d_server.py  minimal_test.py  run_api.py  (+8 more)
living_rusted_tankard/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_LLM_ANALYSIS.md  DEVELOPMENT_NOTES.md  FINAL_ROADMAP_TO_SHAREABILITY.md  FINAL_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_FIXES_TODO.md  LAUNCH_NOW.py  LLM_ANALYSIS_SUMMARY.md  LLM_IMPROVEMENT_PLANS.md  LLM_INTEGRATION_PLAN.md  MISSING_TESTS_ANALYSIS.md  NARRATIVE_INTEGRATION_PLAN.md  NARRATIVE_REALITY_CHECK.md  NEXT_PHASE_PLAN.md  PHASE_INTEGRATION_STATUS.md  QUICK_START.md  README.md  README_AI_OBSERVER.md  SETUP_GLOBAL_COMMAND.md  SIMPLE_COMMANDS.md  SIMULATED_NARRATIVE_SESSION.md  SOLUTION_WEB_INTERFACE.md  START_AND_KEEP_RUNNING.sh  START_GAME.py  THE_THREE_NARRATIVES.md  ai-observer-global.sh  ai_demo_minimal.py  ai_evaluation_report.txt  ai_observer  ai_observer_web.py  ai_player_evaluation.py  ai_web_observer.py  analyze_remaining_errors.py  check_integration_issues.py  clean_whitespace.py  cleanup_whitespace.py  (+77 more)
living_rusted_tankard/api/: deps.py  main.py
living_rusted_tankard/core/: __init__.py  ai_player.py  ai_player_manager.py  api.py  async_llm_optimization.py  async_llm_pipeline.py  audio_system.py  bounties.py  callable_registry.py  clock.py  config.py  db_game_state.py  economy.py  economy_balancing.py  enhanced_llm_game_master.py  error_recovery.py  event.py  event_bus.py  event_formatter.py  fantasy_calendar.py  game.py  game_state.py  gm_thought_cycles.py  items.py  llm_game_master.py  memory.py  narrative_actions.py  news_manager.py  npc.py  npc.py.bak  npc_fix.py  npc_loader.py  optimized_game_state.py  performance_api_integration.py  performance_optimizations.py  player.py  reputation.py  room.py  snapshot.py  time_display.py  (+1 more)
living_rusted_tankard/data/: bounties.json  items.json  news.json  (+1 more)
(+390 files in other folders)
