[tool.poetry]
name = "living-rusted-tankard"
version = "0.1.0"
description = "A text-based RPG set in a mysterious tavern"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "core" },
    { include = "api" },
    { include = "game" }
]
include = [
    "*.py",
    "pyproject.toml",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.13"  # Downgrade to be compatible with SQLModel
typing-extensions = "^4.7.1"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
sqlmodel = "^0.0.8"
sqlalchemy = ">=1.4.17,<=1.4.41"  # Version range compatible with SQLModel
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
requests = "^2.32.3"
aiohttp = "^3.12.4"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
tavern = "cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["core"]
omit = ["**/__pycache__/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[flake8]
max-line-length = 88
extend-ignore = "E203, W503"
per-file-ignores = "__init__.py: F401"
